# group-project

./: .cursorrules  .gitattributes  .gitignore  .windsurfrules  CLAUDE.md  LICENSE  QUICKSTART.md  QUICK_IMPLEMENTATION_PLAN.md  README.md  TESTING.md  key.txt  pyproject.toml  test_runner.py
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
apps/demo/: README.md  app.py
apps/verification/: __init__.py  app.py
apps/webapp/: README.md
data/collection/: search_queries.json
docs/: dataset_structure.md  linear-tasks-template.md  verification_guidelines.md
docs/analysis/: emotion-recognition-architecture.md
docs/deliverables/: DPP.md  Plakat.md  Prezentacja.md  README.md  Raport-roczny.md  Specyfikacja.md
docs/plans/: 2025-01-03-architecture.md  2025-01-03-epics-and-stories.md  2025-01-03-prd.md  2025-01-16-coco-format-spec.md  2025-01-16-dataset-evaluation.md  2025-01-16-dogfacs-research.md  2025-01-16-model-architecture-decisions.md  2025-01-16-tech-stack.md  2025-01-23-video-support-design.md
docs/reports/: final-report.md  presentation-outline.md  quality-assessment.md
models/: README.md  breed.pt  emotion.pt  emotion_metrics.json  keypoints_best.pt  keypoints_dogflw.pt  keypoints_metrics.json
notebooks/: dataset_statistics.ipynb  train_breed_colab.ipynb  train_emotion_kaggle.ipynb  train_keypoints_gdrive.ipynb  train_keypoints_kaggle.ipynb
scripts/: test_keypoints_quality.py  visualize_46_keypoints.py
scripts/annotation/: __init__.py  batch_annotate.py  benchmark.py  export_dataset.py  merge_annotations.py  (+2 more)
test/: .gitignore
(+107 files in other folders)
