[project]
name = "dog-facs"
version = "0.1.0"
description = "Dog FACS Dataset - AI-powered dog emotion annotation pipeline"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Danylo Lohachov" },
    { name = "Danylo Zherzdiev" },
    { name = "Anton Shkrebela" },
    { name = "Mariia Volkova" },
]

dependencies = [
    # Core ML
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",      # YOLOv8
    "timm>=0.9.0",             # ViT, EfficientNet

    # Image/Video processing
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",

    # Data handling
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pycocotools>=2.0.0",

    # Demo app
    "streamlit>=1.28.0",

    # Utilities
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
download = [
    "yt-dlp>=2023.10.0",       # YouTube downloading
]
notebooks = [
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
